# Badgewright

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml
docs/: backlog.md  data-sources.md  market-model.md  optimizer-model.md
docs/adr/: 0001-safety-boundary.md
docs/research/registry/: techniques.yaml
src/steam_badge_optimizer/: __init__.py  cli.py  config.py  safety.py
src/steam_badge_optimizer/analytics/: __init__.py  anomalies.py  booster_arbitrage.py  candidate_selection.py  card_gem_arbitrage.py  cheapest_badges.py  gem_economy.py  inventory_valuation.py  market_scan.py
tests/fixtures/: badges.json  card_search_440.json  getbadges.json  inventory.json
tests/unit/: test_anomalies.py  test_badge_progress.py  test_booster_arbitrage.py  test_candidate_selection.py  test_card_discovery.py  test_card_gem_arbitrage.py  test_cheapest_badges.py  test_cheapest_enrichment.py  test_cheapest_report.py  test_cli.py  test_cli_optimize.py  test_cost.py  test_gem_economy.py  test_goo_value.py  test_greedy.py  test_http_client.py  test_inventory_report.py  test_inventory_valuation.py  test_market_scan.py  test_market_sweep.py  test_model_types.py  test_models.py  test_money.py  test_no_mutating_http.py  test_optimize_auto_fetch.py  test_privacy_hardening.py  test_provenance.py  test_readme_covers_cli.py  test_reports.py  test_safety.py  test_steam_badges_db.py  test_steam_inventory.py  test_steam_market.py  test_steamid.py  test_store.py
(+32 files in other folders)
