[project]
name = "steam-badge-optimizer"
version = "1.3.2"
description = "Badgewright — a local-first, read-only Steam trading-card badge optimizer and market-intelligence tool. Plans; never automates."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "grenlan" }]
keywords = ["steam", "trading-cards", "badges", "optimizer", "local-first"]

# Core runtime deps are intentionally minimal for the skeleton. Heavier deps
# (sqlmodel, pandas, scipy/ortools, selectolax) are added per-milestone behind
# optional-dependencies so the base install stays lean and offline-friendly.
dependencies = [
    "typer>=0.15",
    "pydantic>=2.10",
    "httpx>=0.28",
    "tenacity>=9.0",
    "orjson>=3.11",
    "platformdirs>=4.3",
]

[project.optional-dependencies]
parse = ["selectolax>=0.3.21", "beautifulsoup4>=4.12"]
analytics = ["pandas>=2.2", "duckdb>=1.1"]
optimize = ["pulp>=2.9"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.14",
    "mypy>=1.15",
    "pre-commit>=4.0",
]

[project.scripts]
steam-badge-optimizer = "steam_badge_optimizer.cli:app"
sbo = "steam_badge_optimizer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steam_badge_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["steam_badge_optimizer"]
